k8s/env/staging/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-api-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: 'letsencrypt-learnbud'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - staging.api.learnbud.ai
        - www.staging.api.learnbud.ai
      secretName: api-learnbud-ai-tls
  rules:
    - host: staging.api.learnbud.ai
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 5000
    - host: www.staging.api.learnbud.ai
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 5000
